--- a/source/sass/button.scss
+++ b/source/sass/button.scss
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 17px;
   line-height: 20px;
   font-weight: bold;
