--- a/source/sass/comments.scss
+++ b/source/sass/comments.scss
@@ -3,7 +3,7 @@
 .comments__title {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
@@ -11,41 +11,45 @@
 
   color: #000000;
 }
+
 .comments__item {
   margin: 0;
   padding: 0;
 }
+
 .comments__content {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: normal;
   font-size: 15px;
   line-height: 30px;
   color: #444444;
   margin-top: 35px;
 }
+
 .comments__author {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 17px;
   line-height: 30px;
   color: #444444;
   margin-top: 41px;
 }
+
 .comments__author-link {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: normal;
   font-size: 17px;
   line-height: 30px;
   color: #444444;
   margin-top: 15px;
 }
+
 .comments__add-comment {
   margin-top: 38px;
 }
-
