--- a/source/sass/copyright.scss
+++ b/source/sass/copyright.scss
@@ -6,14 +6,14 @@
   background-color: #f1f1f1;
   height: 80px;
 }
+
 .copyright__text {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 19px;
   line-height: 20px;
   margin-top: 27px;
   color: #000000;
 }
-
