--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -1,22 +1,24 @@
 .features__title {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
   margin-top: 75px;
   color: #000000;
 }
+
 .features__list {
   margin: 0;
   padding: 0;
   list-style: none;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 17px;
   line-height: 20px;
 }
+
 .features__item {
   margin-top: 85px;
 }
