--- a/source/sass/form-page.scss
+++ b/source/sass/form-page.scss
@@ -7,14 +7,14 @@
   padding-bottom: 65px;
   background-color: #f1f1f1;
 }
+
 .form-page__description {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
   font-weight: normal;
   color: #444444;
   margin-top: 29px;
 }
-
