--- a/source/sass/main-menu.scss
+++ b/source/sass/main-menu.scss
@@ -4,17 +4,20 @@
   list-style: none;
   margin-top: 120px;
 }
+
 .main-menu__item {
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #63d1bb;
 }
+
 .main-menu__item--bg-color {
   background-color: #56c3b2;
 }
+
 .main-menu__link {
   text-decoration: none;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 19px;
   line-height: 24px;
   color: #ffffff;
