--- a/source/sass/modal.scss
+++ b/source/sass/modal.scss
@@ -1,23 +1,25 @@
 .modal__title {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
   margin-top: 75px;
   color: #000000;
 }
+
 .modal__choose {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-weight: normal;
   font-size: 15px;
   line-height: 30px;
   margin-top: 75px;
   color: #444444;
 }
+
 .form__submit {
   height: 52px;
   margin-top: 15px;
