--- a/source/sass/nav-list.scss
+++ b/source/sass/nav-list.scss
@@ -4,17 +4,18 @@
   list-style: none;
   width: 320px;
 }
-.nav-list__item{
+
+.nav-list__item {
   margin-top: 33px;
   margin-bottom: 30px;
   margin-left: 75px;
 }
+
 .nav-list__link {
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   text-decoration: none;
   color: #000000;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
-
 }
