--- a/source/sass/production.scss
+++ b/source/sass/production.scss
@@ -1,28 +1,31 @@
 .production__title {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
   color: #000000;
   margin-top: 90px;
 }
+
 .production__video {
   margin: 0;
   padding: 0;
   margin-top: 26px;
 }
+
 .production__intro {
   margin: 0;
   padding: 0;
-  font-family: Open Sans;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
   font-weight: normal;
   color: #444444;
   margin-top: 34px;
 }
+
 .production__make-order {
   margin-top: 30px;
 }
