--- a/source/sass/slider.scss
+++ b/source/sass/slider.scss
@@ -1,17 +1,15 @@
 .slider__toggles {
-  margin: 0;
-  pading: 0;
+  @include reset-indents;
   display: block;
   width: 260px;
   height: 52px;
-  border: 1px solid #444444;
+  border: 1px solid $grey--lighter;
   margin-top: 36px;
 }
 
 .slider__prev,
 .slider__next {
-  margin: 0;
-  pading: 0;
-  width: 128px;
+  @include reset-indents;
+  width: 127px;
   border: none;
 }
