--- a/source/sass/catalog.scss
+++ b/source/sass/catalog.scss
@@ -1,21 +1,18 @@
 @import "product.scss";
 
 .catalog__title {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   padding-top: 75px;
   padding-bottom: 65px;
-  background-color: #f1f1f1;
+  background-color: $grey--lighter;
 }
 
 .catalog__list {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   list-style: none;
 }
 
 .catalog__item {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   margin-top: 30px;
 }
