--- a/source/sass/copyright.scss
+++ b/source/sass/copyright.scss
@@ -1,19 +1,14 @@
 .copyright {
   //display: block;
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   padding-top: 27px;
-  background-color: #f1f1f1;
+  background-color: $grey--lighter;
   height: 80px;
 }
 
 .copyright__text {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: bold;
+  @include reset-indents;
   font-size: 19px;
   line-height: 20px;
   margin-top: 27px;
-  color: #000000;
 }
