--- a/source/sass/features.scss
+++ b/source/sass/features.scss
@@ -1,21 +1,12 @@
 .features__title {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: bold;
+  @include reset-indents;
   font-size: 25px;
-  line-height: 30px;
   margin-top: 75px;
-  color: #000000;
 }
 
 .features__list {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   list-style: none;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: bold;
-  font-size: 17px;
   line-height: 20px;
 }
 
