--- a/source/sass/form-page.scss
+++ b/source/sass/form-page.scss
@@ -1,20 +1,17 @@
 @import "form.scss";
 
 .form-page__title {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   padding-top: 75px;
   padding-bottom: 65px;
-  background-color: #f1f1f1;
+  background-color: $grey--lighter;
 }
 
 .form-page__description {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
+  @include reset-indents;
+  margin-top: 29px;
   font-size: 13px;
   line-height: 24px;
   font-weight: normal;
-  color: #444444;
-  margin-top: 29px;
+  color: $grey;
 }
