--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -1,20 +1,17 @@
 .main-header {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   width: 320px;
 }
 
 .main-header__logo-image {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   margin-left: 116px;
   padding-top: 22px;
   padding-bottom: 22px;
 }
 
 .main-nav__toggle {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   width: 20px;
   height: 14px;
   font-size: 0;
