--- a/source/sass/main-menu.scss
+++ b/source/sass/main-menu.scss
@@ -1,6 +1,5 @@
 .main-menu {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   list-style: none;
   margin-top: 120px;
 }
@@ -8,18 +7,16 @@
 .main-menu__item {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #63d1bb;
+  background-color: $turquoise;
 }
 
 .main-menu__item--bg-color {
-  background-color: #56c3b2;
+  background-color: $turquoise--dark;
 }
 
 .main-menu__link {
   text-decoration: none;
-  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 19px;
   line-height: 24px;
-  color: #ffffff;
-  font-weight: bold;
+  color: $white;
 }
