--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -3,12 +3,7 @@
 
 
 .page-main__title {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
-  font-weight: bold;
+  @include reset-indents;
   font-size: 27px;
-  line-height: 30px;
   margin-top: 75px;
-  color: #000000;
 }
