--- a/source/sass/product.scss
+++ b/source/sass/product.scss
@@ -1,11 +1,8 @@
 .product__title {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
+  @include reset-indents;
   font-size: 17px;
   line-height: 24px;
-  font-weight: bold;
-  color: #000000;
+  color: $black;
   margin-top: 32px;
 }
 
@@ -14,25 +11,18 @@
 }
 
 .product__description {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   text-decoration: none;
-  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 30px;
   font-weight: normal;
-  color: #444444;
+  color: $grey;
   margin-top: 18px;
   margin-bottom: 56px;
 }
 
 .product__price {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   text-decoration: none;
-  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 15px;
   line-height: 24px;
-  font-weight: bold;
-  color: #000000;
 }
