--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,6 @@
+@import "normalize.scss";
+@import "variables.sccs";
+@import "mixin.scss";
 @import "main-header.scss";
 @import "nav-list.scss";
 @import "user-list.scss";
