--- a/source/sass/user-list.scss
+++ b/source/sass/user-list.scss
@@ -1,25 +1,20 @@
 .user-list {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   list-style: none;
   width: 320px;
 }
 
 .user-list__item {
-  margin: 0;
-  padding: 0;
+  @include reset-indents;
   margin-left: 75px;
   margin-top: 33px;
   margin-bottom: 30px;
 }
 
 .user-list__link {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", "Arial", sans-serif;
+  @include reset-indents;
   text-decoration: none;
-  color: #000000;
+  color: $black;
   font-size: 17px;
   line-height: 24px;
-  font-weight: bold;
 }
