--- a/source/sass/comments.scss
+++ b/source/sass/comments.scss
@@ -29,10 +29,49 @@
 
 .comments__author-link {
   @include reset-indents;
-  margin-top: 15px;
   font-weight: normal;
 }
 
 .comments__add-comment {
   margin-top: 38px;
+}
+
+@media (min-width: $tablet-width) {
+  .comments {
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .comments__title {
+    @include tablet-title;
+    order: -1;
+  }
+
+  .comments__content {
+    @include td-content;
+  }
+
+  .comments__add-comment {
+    order: -1;
+    width: 175px;
+    align-self: flex-start;
+    margin-top: 60px;
+  }
+
+  .comments__author {
+    margin-top: 50px;
+  }
+
+  .comments__wrap--tablet {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .comments {
+    margin-left: 175px;
+  }
 }
