--- a/source/sass/nav-list.scss
+++ b/source/sass/nav-list.scss
@@ -1,17 +1,40 @@
 .nav-list {
   @include reset-indents;
   list-style: none;
-  width: 320px;
+  width: 185px;
+  border: 1px solid;
+  margin: 0 auto;
 }
 
 .nav-list__item {
-  margin-top: 33px;
-  margin-bottom: 30px;
-  margin-left: 75px;
+  padding-top: 33px;
+  padding-bottom: 30px;
+  border: 1px solid black;
 }
 
 .nav-list__link {
   text-decoration: none;
   color: $black;
   line-height: 24px;
+}
+
+@media (min-width: $tablet-width) {
+  .nav-list {
+    order: 2;
+    display: flex;
+    flex-direction: row;
+    width: 348px;
+    height: 89px;
+    margin-left: -108px;
+  }
+
+  .nav-list__item {
+    @include reset-indents;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .nav-list {
+    @include reset-indents;
+  }
 }
