--- a/source/sass/comments.scss
+++ b/source/sass/comments.scss
@@ -64,14 +64,25 @@
     margin-top: 50px;
   }
 
-  .comments__wrap--tablet {
-    display: flex;
-    justify-content: space-between;
+  .comments__toggles {
+    @include reset-indents;
+    width: 167px;
+    margin-left: 500px;
+    margin-top: -60px;
+  }
+
+  .comments-toggle {
+    @include reset-indents;
+    width: 80px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .comments {
     margin-left: 175px;
+  }
+
+  .comments__toggles {
+    margin-left: 705px;
   }
 }
