--- a/source/sass/contacts.scss
+++ b/source/sass/contacts.scss
@@ -45,7 +45,7 @@
   }
 
   .contacts__title {
-    @include td-content;
+    @include tablet-title;
     margin-top: 192px;
   }
 
@@ -82,7 +82,7 @@
     margin-left: 175px;
   }
 
-  .contacts__map-wrap {
+  .contacts__map-wrapper {
     @include desktop-center;
     padding-left: 175px;
     display: flex;
