--- a/source/sass/contacts.scss
+++ b/source/sass/contacts.scss
@@ -8,35 +8,39 @@
   font-size: 18px;
 }
 
+.contacts__map-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .contacts__data {
   @include reset-indents;
   font-weight: normal;
   font-size: 15px;
   margin-top: 40px;
   color: $grey;
+  width: 260px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-.data__name,
-.data__value {
-  padding-bottom: 48px;
+.data__name {
+  width: 50px;
 }
 
 .data__value {
-  padding-left: 30px;
+  width: 190px;
 }
 
 .contacts__write-us {
-  margin: 0 auto;
-  margin-top: 39px;
-}
-
-.contacts__data--tablet {
-  display: none;
+  @include mobile-center;
 }
 
 .contacts__map {
   width: 100%;
   margin: 0 auto;
+  margin-bottom: 39px;
 }
 
 @media (min-width: $tablet-width) {
@@ -49,53 +53,57 @@
     margin-top: 192px;
   }
 
-  .contacts__data--tablet {
-    display: block;
-    font-weight: normal;
+  .contacts__data {
+    width: 668px;
+    flex-direction: row;
     font-size: 17px;
-    margin-top: 40px;
+    line-height: 30px;
+    margin-top: 30px;
   }
 
-  .contacts__data {
-    display: none;
+  .data__value {
+    width: 250px;
+  }
+
+  .contacts__write-us {
+    margin: 0 auto;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .contacts__data {
+    width: 340px;
+    flex-wrap: wrap;
+    margin-left: 175px;
+  }
+
+  .contacts__title {
+    width: 340px;
+    margin-left: 175px;
+  }
+
   .contacts__wrapper {
     @include desktop-center;
   }
 
-  .contacts__data {
-    display: block;
-    width: 350px;
-    margin-left: 175px;
-  }
-
-  .contacts__data--tablet {
-    display: none;
-  }
-
-  .contacts__title {
-    @include desktop-title;
-    width: 350px;
-    margin-left: 175px;
-  }
-
-  .contacts__map-wrapper {
+  .contacts__for-desktop {
     @include desktop-center;
-    padding-left: 175px;
     display: flex;
-    margin-top: -400px;
-    justify-content: space-around;
-  }
-
-  .contacts__map {
-    width: 505px;
-    order: 2;
+    justify-content: space-between;
   }
 
   .contacts__write-us {
+    @include reset-indents;
+    width: 300px;
+    margin-left: 175px;
     align-self: flex-end;
+  }
+
+  .contacts__map {
+    @include reset-indents;
+    order: 2;
+    height: 457px;
+    width: 525px;
+    margin-top: -350px;
   }
 }
