--- a/source/sass/main-nav.scss
+++ b/source/sass/main-nav.scss
@@ -1,21 +1,28 @@
-@import "nav-list.scss";
-@import "user-list.scss";
-
 .main-nav__toggle {
   @include reset-indents;
-  display: none;
+  display: block;
   width: 20px;
   height: 14px;
   font-size: 0;
   background-color: green;
   //просто  что бы видно было
+
+  margin-top: -50px;
+  margin-left: 265px;
+  margin-bottom: 35px;
 }
 
 @media (min-width: $tablet-width) {
   .main-nav__wrapper {
     @include reset-indents;
+    @include mobile-center;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
 
@@ -23,5 +30,9 @@
   .main-nav__wrapper {
     width: 1050px;
     justify-content: space-between;
+  }
+
+  .main-nav__toggle {
+    display: none;
   }
 }
