--- a/source/sass/page-main.scss
+++ b/source/sass/page-main.scss
@@ -1,21 +1,32 @@
-@import "main-menu.scss";
-@import "products";
-
 .page-main__wrapper {
   width: 260px;
   margin: 0 auto;
 }
 
+.page-main__title-wrapper {
+  @include reset-indents;
+  background-color: $grey--lighter;
+  width: 100%;
+  min-height: 284px;
+}
+
 .page-main__title {
   @include reset-indents;
+  @include mobile-center;
   font-size: 27px;
-  margin-top: 75px;
+  padding-top: 75px;
 }
 
 @media (min-width: $tablet-width) {
+  .page-main__title-wrapper {
+    @include reset-indents;
+    min-height: 627px;
+  }
+
   .page-main__title {
     @include tablet-title;
-    margin-top: 155px;
+    @include tablet-center;
+    padding-top: 155px;
   }
 
   .page-main__wrapper {
@@ -26,7 +37,8 @@
 @media (min-width: $desktop-width) {
   .page-main__title {
     @include desktop-title;
-    margin-top: 163px;
+    @include desktop-center;
+    padding-top: 163px;
   }
 
   .page-main__wrapper {
