--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,17 +1,30 @@
 @import "normalize.scss";
 @import "variables.sccs";
+@import "scaffolding.scss";
 @import "mixin.scss";
 @import "main-header.scss";
 @import "nav-list.scss";
 @import "user-list.scss";
 @import "page-main.scss";
-@import "features";
-@import "comments";
-@import "contacts";
-@import "social";
-@import "copyright";
-@import "modal";
-@import "catalog";
+@import "features.scss";
+@import "comments.scss";
+@import "contacts.scss";
+@import "contact-form.scss";
+@import "social.scss";
+@import "copyright.scss";
+@import "modal.scss";
+@import "catalog.scss";
 @import "production.scss";
 @import "form-page.scss";
 @import "footer.scss";
+@import "button.scss";
+@import "color.scss";
+@import "form.scss";
+@import "main-menu.scss";
+@import "main-nav.scss";
+@import "more.scss";
+@import "personal-data.scss";
+@import "product.scss";
+@import "products.scss";
+@import "slider.scss";
+@import "type.scss";
