--- a/source/sass/main-header.scss
+++ b/source/sass/main-header.scss
@@ -1,5 +1,3 @@
-@import "main-nav.scss";
-
 .main-header {
   @include reset-indents;
   width: 320px;
@@ -15,8 +13,7 @@
 .main-header__logo {
   @include reset-indents;
   width: 86px;
-  //display: inline-block;
-  //height: 80px;
+  height: 79px;
   border: 1px solid black;
   margin: 0 auto;
 }
@@ -29,19 +26,18 @@
 
 @media (min-width: $tablet-width) {
   .main-header {
-    width: 768px;
-    height: 89px;
-    margin: 0 auto;
+    width: 100%;
   }
 
   .main-header__wrapper {
+    @include tablet-center;
     flex-direction: row;
   }
 
   .main-header__logo {
     @include reset-indents;
     width: 111px;
-    margin-left: 50px;
+    height: 46px;
   }
 }
 
