--- a/source/sass/main-menu.scss
+++ b/source/sass/main-menu.scss
@@ -1,7 +1,6 @@
 .main-menu {
   @include reset-indents;
   list-style: none;
-  margin-top: 120px;
 }
 
 .main-menu__item {
@@ -15,26 +14,28 @@
 }
 
 .main-menu__link {
+  @include mobile-center;
   text-decoration: none;
   font-size: 19px;
   line-height: 24px;
   color: $white;
+  display: block;
 }
 
 @media (min-width: $tablet-width) {
   .main-menu {
+    @include tablet-center;
     width: 668px;
     display: flex;
   }
 
   .main-menu__item {
     width: 525px;
-    margin-top: 253px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .main-menu {
-    width: 1050px;
+    @include desktop-center;
   }
 }
