--- a/source/sass/production.scss
+++ b/source/sass/production.scss
@@ -32,12 +32,16 @@
 
   .production__video {
     width: 668px;
+  }
+
+  .production__videoplayer {
     order: -1;
   }
 
   .production__title {
     font-size: 20px;
     line-height: 24px;
+    margin-top: 44px;
   }
 
   .production__intro {
@@ -62,12 +66,7 @@
     height: 455px;
   }
 
-  .production__title {
-    width: 350px;
-    margin-left: 30px;
-  }
-
-  .production__wrapper--desktop {
+  .production__intro-wrapper {
     width: 350px;
     margin-left: 710px;
     margin-top: -400px;
