--- a/source/sass/comments.scss
+++ b/source/sass/comments.scss
@@ -65,7 +65,7 @@
   .comments__toggles {
     @include reset-indents;
     width: 167px;
-    margin-left: 500px;
+    margin-left: auto;
     margin-top: -60px;
   }
 
