--- a/source/sass/social.scss
+++ b/source/sass/social.scss
@@ -38,7 +38,7 @@
   .social-copyright__wrapper {
     @include tablet-center;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
   }
 }
 
