--- a/source/sass/footer.scss
+++ b/source/sass/footer.scss
@@ -2,9 +2,17 @@
   @include mobile-center;
 }
 
+.page-footer__logo {
+  display: none;
+}
+
 @media (min-width: $tablet-width) {
   .page-footer__wrapper {
     @include tablet-center;
+  }
+
+  .page-footer__logo {
+    display: block;
   }
 }
 
